--- a/spotify_extract_audio_features.ipynb
+++ b/spotify_extract_audio_features.ipynb
@@ -1135,7 +1135,7 @@
    "outputs": [],
    "source": [
     "# Convert the dataframe to a csv\n",
-    "songs_description_df.to_csv('spotify_playlist_songs.csv', index = False)"
+    "songs_description_df.to_csv('Resources/spotify_playlist_songs.csv', index = False)"
    ]
   },
   {
